# Teach_Cooperative

./: README.md  chatgpt.py
src/ego_planning/plan_env/: CMakeLists.txt
src/ego_planning/plan_env/src/: grid_map.cpp
src/ego_planning/plan_manage/launch/: advanced_param.xml  co_advanced_param.xml  planning.launch  simulator.xml
src/ego_planning/plan_manage/src/: ego_planner_node.cpp  ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
src/mapping/include/mapping/: mapping.h
src/mapping/launch/: grid_map.launch  mapping.launch
src/mapping/plan_env/config/: laser.yaml
src/mapping/plan_env/launch/: grid_map.launch
src/mapping/plan_env/src/: mapping_nodelet.cpp
src/mapping/src/: mapping.cc  mapping_nodelet.cpp
src/planning/planning/launch/: fake_car_target.launch  generate_obj.launch  simulation_landing.launch
src/planning/planning/src/: planning_nodelet.cpp
src/simulator/local_sensing/: CMakeLists.txt
src/simulator/local_sensing/params/: laser.yaml
src/simulator/mockamap/: CMakeLists.txt  package.xml
src/simulator/mockamap/include/mockamap/: maps.hpp
src/simulator/mockamap/launch/: mockamap.launch
src/simulator/mockamap/rviz/: mockamap.rviz
src/simulator/mockamap/src/: maps.cpp  mockamap.cpp
src/simulator/simulator/: CMakeLists.txt  package.xml
src/simulator/sitl/yutu_description/: CMakeLists.txt  package.xml
src/simulator/sitl/yutu_description/config/: joint_names_yutu.yaml  yutu_arbotix.yaml  yutu_control.yaml
src/simulator/sitl/yutu_description/config/yutu/: yutu_0_arbotix.yaml  yutu_1_arbotix.yaml  yutu_2_arbotix.yaml  yutu_3_arbotix.yaml  yutu_4_arbotix.yaml  yutu_5_arbotix.yaml
src/simulator/sitl/yutu_description/launch/: multi_yutu_sim.launch  multi_yutu_sitl.launch  single_yutu_sim.launch  single_yutu_sitl.launch
src/simulator/sitl/yutu_description/meshes/: base_link.STL  camera_link.STL  left_down_link.STL  left_front_wheel_link.STL  left_middle_wheel_link.STL  left_rear_wheel_link.STL  left_up_link.STL  lidar_link.STL  right_down_link.STL  right_front_wheel_link.STL  right_middle_wheel_link.STL  right_rear_wheel_link.STL  right_up_link.STL
src/simulator/sitl/yutu_description/rviz/: multi_robot.rviz
src/simulator/sitl/yutu_description/scripts/: multi_coordinate_transfer.py  multi_odom.py
src/simulator/sitl/yutu_description/urdf/urdf/: YuTuURDF.csv  YuTuURDF.urdf
src/simulator/sitl/yutu_description/urdf/xacro/: 2d_laser.xacro  imu.xacro  release_camera.xacro  sensor.xacro  sensor_high.xacro  skid_steer_drive_controller.xacro  stereo_camera.xacro  velodyne.xacro  xmaterials.xacro  yutu_sim.xacro
src/simulator/sitl/yutu_description/worlds/: maze.world  terrain.world
src/simulator/sitl/yutu_description/worlds/maze/: model.sdf
(+15 files in other folders)
