<package format="2">
  <name>yutu_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for yutu_description</p>
    <p>This package contains configuration data, 3D models and launch files
for yutu_description robot</p>
  </description>
  <author>krasjet_yu</author>
  <maintainer email="krasjet.ziping@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>